# civic-salon

./: .gitignore  README.md  pyproject.toml
civic_salon/: .env-example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
civic_salon/app/: app.py
civic_salon/app/chain/: post_geny.py
civic_salon/app/rag/: news_retriever.py
civic_salon/chain/: post_geny.py
civic_salon/crawl/: scraper.py
civic_salon/llm/: chat_news_helper.py  news_rag_chain_config.yaml
civic_salon/rag/: news_retriever.py
social-ui/: package-lock.json  package.json
social-ui/src/app/: layout.tsx  page.tsx
social-ui/src/app/components/: Header.tsx  MainContent.tsx  MobileNavBar.tsx  Sidebar.tsx
social-ui/src/app/context/: AuthContext.tsx
social-ui/src/app/page/: post.tsx
social-ui/src/app/screens/: LoginScreen.tsx  Messages.tsx  PostDetail.tsx  Profile.tsx
social-ui/src/lib/: languages.ts
